# 1.20.51

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  README.md  dev-headers.rcnet  headers.rcnet  headers.rcnet.xml
Injector/: CMakeLists.txt  main.cpp
Injector/Discord/: CMakeLists.txt  DiscordRPCIntegration.cpp  DiscordRPCIntegration.h  RPCServer.cpp  RPCServer.h
Injector/Injection/: CMakeLists.txt  Injector.h  LoadLibInjector.cpp  ManMapInjector.cpp  MapData.h
Injector/Pages/: AboutPage.cpp  AboutPage.h  AccountPage.cpp  AccountPage.h  CMakeLists.txt  InjectPage.cpp  InjectPage.h  SettingsPage.cpp  SettingsPage.h  VersionsPage.cpp  VersionsPage.h
Injector/Process/: CMakeLists.txt  ProcUtil.cpp  ProcUtil.h
Injector/Versions/: CMakeLists.txt  Version.cpp  Version.h  VersionList.cpp  VersionList.h
Nuvola/: CMakeLists.txt  main.cpp
Nuvola/Client/: CMakeLists.txt  InstallableSystem.h  System.h  SystemInterface.h  SystemManager.cpp  SystemManager.h  SystemsInst.h
Nuvola/Client/Bridge/: Abilities.h  Ability.h  Actor.h  ActorDefinitionIdentifier.h  ActorFactory.h  ActorFlags.h  ActorManager.h  ActorRuntimeID.h  ActorType.h  ActorUniqueID.h  ArmorItem.h  Attribute.h  BaseAttributeMap.h  Block.h  BlockLegacy.h  BlockPalette.h  BlockSource.h  BlockTypeRegistry.h  ByteArrayTag.h  ByteTag.h  CMakeLists.txt  ChunkSource.h  ClientHMDState.h  ClientInputHandler.h  ClientInputMappingFactory.h  ClientInstance.h  CompoundTag.h  CompoundTagVariant.h  Container.h  ContainerOpenPacket.h  ContainerScreenController.h  ControlsSettings.h  DiggerItem.h  Dimension.h  DoubleTag.h  Enchant.h  EnchantUtils.h  EndTag.h  EntityContext.h  EntityRefTraits.h  (+89 more)
Nuvola/Client/Bridge/Bedrock/: NonOwnerPointer.h  Utils.h  mce.h
Nuvola/Client/Bridge/Components/: AABBShapeComponent.h  AbilitiesComponent.h  ActorDefinitionIdentifierComponent.h  ActorFlagComponent.h  ActorGameTypeComponent.h  ActorHeadRotationComponent.h  ActorMovementProxyComponent.h  ActorRotationComponent.h  ActorTypeComponent.h  AttributesComponent.h  BlockMovementSlowdownMultiplierComponent.h  CameraAttachComponent.h  CameraFlyMoveComponent.h  HitResultComponent.h  HitboxComponent.h  IFoodItemComponent.h  ItemUseSlowdownModifierComponent.h  JumpControlComponent.h  LookControlComponent.h  MobHurtTimeComponent.h  MovementInterpolatorComponent.h  RenderPositionComponent.h  RuntimeIDComponent.h  StateVectorComponent.h  TriggerJumpRequestComponent.h  UpdatePlayerFromCameraComponent.h
Nuvola/Client/Bridge/Nuvola/: Bridge.cpp  Bridge.h  CMakeLists.txt
Nuvola/Client/Bridge/RakNet/: RakPeer.h  RakPeerInterface.h
Nuvola/Client/Bridge/entt/: fwd.hpp
Nuvola/Client/Bridge/mce/: Camera.h
Nuvola/Client/Events/: ActorEvent.h  ActorMotionEvent.h  ActorMoveEvent.h  ActorRotateEvent.h  BlockChangedEvent.h  BlockLegacyEvent.h  BlockLegacyLayerEvent.h  BlockStartDestroyEvent.h  CMakeLists.txt  CameraDeltaEvent.h  Cancellable.h  ChatEvent.h  ContainerScreenControllerTickEvent.h  Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  FogGetColorEvent.h  GetCloudHeightEvent.h  HighPriorityBlockProcessEvent.h  KeyEvent.h  LevelEvent.h  LevelTickEvent.h  MobEvent.h  MobQueryJumpPowerEvent.h  MouseEvent.h  PacketEvent.h  PlayerEvent.h  PlayerSlowedByItemEvent.h  RakEvent.h  RakPeerRunUpdateCycleEvent.h  ReceivePacketEvent.h  RenderEvent.h  ScreenControllerEvent.h  attackActorEvent.h
Nuvola/Client/Features/: CMakeLists.txt
Nuvola/Client/Features/Commands/: CMakeLists.txt  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
Nuvola/Client/Features/Config/: CMakeLists.txt  Config.cpp  Config.h  ConfigManager.cpp  ConfigManager.h
Nuvola/Client/Features/IRC/: CMakeLists.txt  ChatClient.cpp  ChatClient.h  KairunVM.cpp  KairunVM.h  base64.h
Nuvola/Client/Features/Keymap/: CMakeLists.txt  Keymap.cpp  Keymap.h  KeymapManager.cpp  KeymapManager.h
Nuvola/Client/Features/Modules/: BlockTypeListSetting.cpp  BlockTypeListSetting.h  CMakeLists.txt  Category.cpp  Category.h  EnchantWeightSetting.cpp  EnchantWeightSetting.h  EntityTypeListSetting.cpp  EntityTypeListSetting.h  GroupSetting.cpp  GroupSetting.h  IModeSetting.h  ModeSetting.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h  Setting.h
Nuvola/Client/Features/Theme/: CMakeLists.txt  Theme.cpp  Theme.h  ThemeColor.h  ThemeIcon.h  ThemeManager.cpp  ThemeManager.h
Nuvola/Client/GUI/: BlockTypeSelectionScreen.cpp  BlockTypeSelectionScreen.h  CMakeLists.txt  ClickGuiScreen.cpp  ClickGuiScreen.h  ClientScreen.h  EnchantWeightScreen.cpp  EnchantWeightScreen.h  EntityTypeSelectionScreen.cpp  EntityTypeSelectionScreen.h  NuControls.cpp  NuControls.h  Screen.cpp  Screen.h  ScreenData.h  ScreenManager.cpp  ScreenManager.h  TypeSelectionScreen.h  WindowScreen.cpp  WindowScreen.h
Nuvola/Client/Offsets/: CMakeLists.txt  OffsetManager.cpp  OffsetManager.h  OffsetProvider.cpp  OffsetProvider.h  OffsetTable.h
Nuvola/Client/Offsets/Actor/: ActorOffsetProvider.cpp  ActorOffsetProvider.h  CMakeLists.txt
Nuvola/Client/Offsets/ClientHMDState/: CMakeLists.txt  ClientHMDStateOffsetProvider.cpp  ClientHMDStateOffsetProvider.h
Nuvola/Client/Offsets/ClientInstance/: CMakeLists.txt  ClientInstanceOffsetProvider.h  (+1 more)
Nuvola/Client/Panel/: CMakeLists.txt  WebPanel.cpp  WebPanel.h
Nuvola/Client/Patches/: CMakeLists.txt  IPatch.cpp  IPatch.h  PatchManager.cpp  PatchManager.h
Nuvola/Client/Preferences/: CMakeLists.txt  Preferences.cpp  Preferences.h
Nuvola/Client/Rendering/: BlockRenderer.cpp  BlockRenderer.h  CMakeLists.txt  GeometryBuilder.cpp  GeometryBuilder.h  IRenderer.h  RenderController.cpp  RenderController.h  RenderTexture.cpp  RenderTexture.h  Utils.h  Vertex.h  VertexBuffer.h  WorldRenderer.cpp  WorldRenderer.h
Nuvola/Client/Signatures/: CMakeLists.txt  SigManager.cpp  SigManager.h  SigProvider.cpp  SigProvider.h  SigTable.cpp  SigTable.h
Nuvola/Mem/: CMakeLists.txt  Mem.cpp  Mem.h
Nuvola/Utils/: CMakeLists.txt  GroupedType.h  LogicUtils.cpp  LogicUtils.h  RenderUtils.cpp  RenderUtils.h  TargetUtils.cpp  TargetUtils.h  VersionUtils.cpp  VersionUtils.h
(+366 files in other folders)
