target_sources(Nuvola PRIVATE
	"SystemManager.cpp"
)

add_subdirectory(Bridge)
add_subdirectory(Events)
add_subdirectory(Features)
add_subdirectory(GUI)
add_subdirectory(Offsets)
#add_subdirectory(Panel)
add_subdirectory(Patches)
add_subdirectory(Preferences)
add_subdirectory(Rendering)
add_subdirectory(Signatures)