target_sources(Nuvola PRIVATE
	"OffsetManager.cpp"
	"OffsetProvider.cpp"
)

add_subdirectory(Actor)
add_subdirectory(ClientHMDState)
add_subdirectory(ClientInstance)
add_subdirectory(Level)
add_subdirectory(LevelRendererPlayer)
add_subdirectory(Mob)
add_subdirectory(Options)
add_subdirectory(Player)
add_subdirectory(LocalPlayer)